# fastapi-cline-mistral

./: Dockerfile  README.md  pyproject.toml  spec.yaml  uv.json
.github/workflows/: ci.yml
k8s/: deployment.yaml
tests/: test_main.py
