[tool.poetry]
name = "fastapi-hello-world"
version = "0.1.0"
description = "A simple FastAPI application with a single 'hello world' endpoint"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
